# sql_str_lint

./: .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
sql_str_lint/: .sqlfluff  hook.py
sql_str_lint/utils/: ast.py
